# jnrrd

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: JNRRD-CONCEPT.md  NRRD-SPEC.txt  dicom-transformations.txt  segmentations.md  slicerio-segmentation.py  slicerio.txt
itk/: CMakeLists.txt  JNRRDTest.cxx  README.md  itkJNRRDImageIO.cxx  itkJNRRDImageIO.h  itkJNRRDImageIOFactory.cxx  itkJNRRDImageIOFactory.h  jnrrdConfig.h.in
python/: setup.py
python/jnrrd/: __init__.py  reader.py  writer.py
python/jnrrd/examples/: example.py
python/jnrrd/tests/: test_io.py
spec/: JNRRD-SPECIFICATION.md  NRRD-EXTENSIONS-SPEC.md  coordinate-consistency.md  dicom-extension.md  fits-extension.md  jnrrd_header_parser.md  jnrrd_header_parser.py  metadata-extension.md  nifti-extension.md  ome-extension.md  tiling-extension.md  transforms-extension.md
