[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jnrrd"
version = "0.2.0"
description = "JSON-based Nearly Raw Raster Data - A modern evolution of the NRRD file format"
authors = [
    {name = "JNRRD Contributors"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
all = [
    "bz2file>=0.98",
    "zstandard>=0.18.0",
    "lz4>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/username/jnrrd"
"Bug Tracker" = "https://github.com/username/jnrrd/issues"
"Documentation" = "https://github.com/username/jnrrd/README.md"